--- a/views/my-course/activity-summary.ejs
+++ b/views/my-course/activity-summary.ejs
@@ -1,5 +1,4 @@
 <div ng-controller="BarProgressController">
-    number of link: {{linkCount}}
     <div class="col-xs-12">
         <div class="activity-summary-widget box-body">
             <div class="col-xs-3" style="padding-left: 0px; padding-right: 0px;">
@@ -29,7 +28,7 @@
                             <div class="inner">
                                 <p align="center">Node Activity Summary</p>
                                 <canvas id="pie" class="chart chart-pie"
-                                        chart-data="dataPie" chart-labels="labelsPie" chart-legend="true">
+                                        chart-data="nodeActivityData" chart-labels="nodeActivityLabels" chart-legend="true">
                                 </canvas>
                             </div>
                         </div>
@@ -39,7 +38,7 @@
                             <div class="inner">
                                 <p align="center">Content Node Activity Summary</p>
                                 <canvas id="pie2" class="chart chart-pie"
-                                        chart-data="pushedData" chart-labels="labelsPie2" chart-legend="true">
+                                        chart-data="contentNodeActivityData" chart-labels="contentNodeActivityLabels" chart-legend="true">
                                 </canvas>
                             </div>
                         </div>
