--- a/views/my-course/activity-summary.ejs
+++ b/views/my-course/activity-summary.ejs
@@ -10,7 +10,7 @@
                         </div>
                         <!-- /.widget-user-image -->
                         <h3 class="widget-user-username" align="center">{{user.displayName}}</h3>
-                        <h5 class="widget-user-desc" align="center" style="padding-bottom: 5px;">Register Date: {{user.dateAdded | date:'yyyy-MM-dd'}}</h5>
+                        <h5 class="widget-user-desc" align="center" style="padding-bottom: 5px;">Member Since: {{user.dateAdded | date:'yyyy-MM-dd'}}</h5>
                     </div>
                     <div class="box-footer no-padding">
                         <ul class="nav nav-stacked">
