--- a/views/course-analytics/top-contributor.ejs
+++ b/views/course-analytics/top-contributor.ejs
@@ -6,13 +6,13 @@
             </div>
             <div class="product-info">
                 <div class="product-title">{{user.userId.displayName | capitalize}}
-                    <span class="label label-warning pull-right">{{user.totalCount}} activities</span>
+                    <span class="label label-warning pull-right">{{user.totalCount}} <ng-pluralize count="user.totalCount" when="{'0': 'activity', '1': 'activity', 'other': 'activities',}"></ng-pluralize></span>
                 </div>
                 <span class="product-description" title="course activity such as add material and discussion">
-                  <b>{{user.countCourseActivity}}</b> Course Activities
+                  <b>{{user.countCourseActivity}}</b> <ng-pluralize count="user.countCourseActivity" when="{'0': 'course activity', '1': ' course activity', 'other': 'course activities',}"></ng-pluralize>
                 </span>
                 <span class="product-description" title="node activity such as material annotation and add link">
-                  <b>{{user.countNodeActivity}}</b> Node Activities
+                  <b>{{user.countNodeActivity}}</b> <ng-pluralize count="user.countNodeActivity" when="{'0': 'node activity', '1': 'node activity', 'other': 'node activities',}"></ng-pluralize>
                 </span>
             </div>
         </li>
