--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -41,6 +41,8 @@
                                     <div class="">
                                         <div class="product-img" style="margin-left: 10px;"><img src="{{nfData.userId.image}}" alt="user image" class="img-circle" style="width: 30px; height: auto;"/></div>
                                         <div class="product-info">
+                                            <!--<b>{{nfData.userId.displayName}}</b> <span ng-show="'{{nfData.actionSubject}}' != 'canceled vote'">{{nfData.actionType}}</span> {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> </span>
+                                            <a><b>{{nfData.actionName}}</b></a>-->
                                             <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} <span ng-if="nfData.actionType == 'enrolled'">in</span> {{nfData.actionSubject}}
                                             <a ng-show="nfData.actionSubject == 'content node' || nfData.actionSubject == 'node' || nfData.actionSubject == 'sub topic'" href="#/cid/{{curUrl.courseId}}?tab=map"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'discussion'" href="#/cid/{{curUrl.courseId}}?tab=discussion"><b>{{nfData.actionName | capitalize}}</b></a>
