--- a/views/admin-lte/course/peerAssessment/peerAssessment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessment.ejs
@@ -1,10 +1,21 @@
 <div ng-controller="PeerAssessmentController">
-    <div class="col-md-11">
-        <div ng-show="peerreviews.length == 0">
-            <h5>No Peer Reviews for this course yet</h5>
-        </div>
-        <table class="table table-hover" ng-show="peerreviews.length > 0">
-            <thead>
+    <div ng-include="currentView"></div>
+    <% include addNewAssignmentModal %>
+    <% include editAssignmentModal%>
+    <% include confirmDeleteAssignmentModal %>
+    <% include addEditSolutionModal%>
+</div>
+<script type="text/ng-template" id="viewAssignment.tpl">
+    <% include viewAssignment%>
+</script>
+<script type="text/ng-template" id="main.tpl">
+    <div>
+        <div class="col-md-11">
+            <div ng-show="peerreviews.length == 0">
+                <h5>No Peer Reviews for this course yet</h5>
+            </div>
+            <table class="table table-hover" ng-show="peerreviews.length > 0">
+                <thead>
                 <tr>
                     <th>Title</th>
                     <th>Publication Date</th>
@@ -12,9 +23,9 @@
                     <th>Total Marks</th>
                     <th ng-show="isOwner || isManager || isAdmin"></th>
                 </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="review in peerreviews" ng-click="openViewModal(review)">
+                </thead>
+                <tbody>
+                <tr ng-repeat="review in peerreviews" ng-click="viewPeerReview(review)">
                     <td>{{review.title}}</td>
                     <td>{{review.publicationDate | date:'dd.MM.yyyy HH:mm'}}</td>
                     <td>{{review.dueDate | date:'dd.MM.yyyy HH:mm'}}</td>
@@ -24,11 +35,8 @@
                         <a href="" ng-click="openDeleteConfirmationModal(review._id, $event)"> <i class="ion-ios-trash" style="font-size: large"></i> </a>
                     </td>
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <% include addNewAssignmentModal %>
-    <% include editAssignmentModal%>
-    <% include confirmDeleteAssignmentModal %>
-    <% include viewAssignmentModal%>
-</div>
+</script>
