--- a/views/admin-lte/course/peerAssessment/peerAssessmentActionBar.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessmentActionBar.ejs
@@ -1,8 +1,9 @@
 <ul ng-controller="PeerAssessmentController">
-    <li ng-show="isOwner || isManager || isAdmin">
-        <a style="cursor: pointer;"
-           data-toggle="modal" data-target="#addNewAssignmentModal"
-           title="New Peer Review">
-            <i class="ionicons ion-android-add"></i> &nbsp; NEW PEER REVIEW</a>
+    <li ng-repeat="EAM in extraActionsMenu">
+        <a ng-if="EAM.html" ng-bind-html="EAM.html|unsafe"></a>
+        <i class="ionicons ion-android-more-vertical" ng-if="EAM.separator">&nbsp;</i>
+        <a class="cursor" title="EAM.aTitle" ng-show="EAM.clickAction" ng-click="EAM.clickAction(EAM.clickParams)"
+           ng-bind-html="EAM.title|unsafe">
+        </a>
     </li>
 </ul>
