--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -39,8 +39,8 @@
 <script src="/bower/videogular-angulartics/vg-analytics.min.js"></script>
 <script src="/bower/videogular-overlay-play/vg-overlay-play.min.js"></script>
 <script src="/bower/videogular-youtube/youtube.js"></script>
-<script src="/bower/videogular-vimeo/vg-vimeo.js"></script>
 <script src="/bower/vimeo-jquery-api/dist/jquery.vimeo.api.min.js"></script>
+<script src="/bower/videogular-vimeo/dist/vg-vimeo.min.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/js/countmap/countmap.js"></script>
