Add/Edit Solution Implemented, Folder structure for files changed due title renaming issue

--- a/views/admin-lte/course/peerAssessment/peerAssessment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessment.ejs
@@ -8,6 +8,9 @@
 <script type="text/ng-template" id="viewAssignment.tpl">
     <% include viewAssignment%>
 </script>
+<script type="text/ng-template" id="seeAllSolutions.tpl">
+    <% include seeAllSolutions%>
+</script>
 <script type="text/ng-template" id="main.tpl">
     <div>
         <div class="col-md-11">
