--- a/views/my-course/courses-breakdown.ejs
+++ b/views/my-course/courses-breakdown.ejs
@@ -20,17 +20,17 @@
                             <tbody>
                                 <tr ng-repeat="resource in courseEnrolledResources | orderBy: 'treeNodeId.name'" ng-if="resource.courseId == enrolled.course._id  && resource.treeNodeId.name">
                                     <td ng-if="resource.type=='pdf'">
-                                        <a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=pdf" class="">
+                                        <!--<a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=pdf" class="">-->
                                             <i class="fa fa-file-pdf-o"></i> {{resource.treeNodeId.name}}
-                                        </a>
+                                        <!--</a>-->
                                         <small class="label label-primary pull-right" style="font-size: 12px;" title="number of pdf annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-pdf-o"></i> {{(newsfeedData | filter:isPdfAnno | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
                                         <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px;" title="number of link you created"><i class="fa fa-link"></i> {{(newsfeedData | filter:isLink | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
                                         <i class="fa fa-user pull-right" style="color: #3c8dbc; font-size: 14px; margin-right: 2px;" ng-if="resource.createdBy == user._id" title="this is the content you created"></i>
                                     </td>
                                     <td ng-if="resource.type!='pdf'">
-                                        <a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=video" class="">
-                                            <i class="fa fa-file-movie-o"></i> {{resource.treeNodeId.name}}
-                                        </a>
+                                        <!--<a href="/treeNode/{{resource.treeNodeId._id}}/#/cid/{{resource.courseId}}/nid/{{resource.treeNodeId._id}}?tab=video" class="">-->
+                                        <i class="fa fa-file-movie-o"></i> {{resource.treeNodeId.name}}
+                                        <!--</a>-->
                                         <small class="label label-primary pull-right" style="font-size: 12px;" title="number of video annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-movie-o"></i> {{(newsfeedData | filter:isPdfAnno | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
                                         <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px;" title="number of link you created"><i class="fa fa-link"></i> {{(newsfeedData | filter:isLink | filter:isAdded | filter:(resource.treeNodeId._id)).length}}</small>
                                         <i class="fa fa-user pull-right" style="color: #3c8dbc; font-size: 14px; margin-right: 2px;" ng-if="resource.createdBy == user._id" title="this is the content you created"></i>
