--- a/views/my-course/pdf-status.ejs
+++ b/views/my-course/pdf-status.ejs
@@ -1,5 +1,5 @@
 <div class="box-body no-padding" ng-controller="PdfStatusController">
-    <table class="table table-striped">
+    <table class="table table-striped" ng-if="pdfHistory.length !=0">
         <tbody>
         <tr>
             <th>
@@ -33,4 +33,5 @@
         </tr>
         </tbody>
     </table>
+    <div ng-if="pdfHistory.length == 0" style="margin-top: 20px; margin-left: 10px;">You have not read any PDF document yet.</div>
 </div>
