--- a/views/admin-lte/oauth/oHeader.ejs
+++ b/views/admin-lte/oauth/oHeader.ejs
@@ -15,18 +15,17 @@
     <link href="/bower/AdminLTE/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <link href="/css/posts.css" rel="stylesheet" type="text/css"/>
-    <link href="/jquery-ui/themes/black-tie/jquery-ui.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <script src="/angular/angular.min.js" type="text/javascript"></script>
-    <script src="/angular/angular-route.min.js"></script>
-    <script src="/angular/angular-animate.min.js"></script>
-    <script src="/angular/angular-resource.min.js"></script>
-    <script src="/angular/angular-cookies.min.js"></script>
+    <script src="/bower/angular/angular.min.js" type="text/javascript"></script>
+    <script src="/bower/angular-route/angular-route.min.js"></script>
+    <script src="/bower/angular-animate/angular-animate.min.js"></script>
+    <script src="/bower/angular-resource/angular-resource.min.js"></script>
+    <script src="/bower/angular-cookies/angular-cookies.min.js"></script>
 
 </head>
 <!--
