fix error msg in recommend cat

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -909,3 +909,8 @@ li.info-links li a:hover {
   color: inherit;
 }
 
+#toast-container{
+    pointer-events: none!important;
+}
+
+.toast{pointer-events: auto;}
